# qarko-os

./: .gitignore  package-lock.json  package.json  qarko-os-codex-custom-instructions.compact.ko.txt  qarko-os-codex-custom-instructions.ko.txt  tailwind.config.js
docs/: DESKTOP_APP.ko.md  beta-test-playbook.md  security-baseline.md
docs/superpowers/plans/: 2026-05-17-qarko-os-mvp.md  2026-05-21-hermes-adapter-workbench.md  2026-05-21-qarko-os-workbench-redesign.md  2026-05-25-qarko-runner-core.md
docs/superpowers/specs/: 2026-05-17-qarko-os-mvp-design.ko.md  2026-05-17-qarko-os-mvp-design.md  2026-05-21-qarko-os-workbench-redesign.ko.md  2026-05-22-qarko-codex-style-hermes-workbench.ko.md  2026-05-25-qarko-codex-level-hermes-wrapper.ko.md
scripts/: create-tauri-icon.mjs  serve-dist.mjs
server/: discordNotifier.mjs  index.mjs  seedWorkspace.mjs  workspaceStore.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hermes-hooks.nsh
src/adapters/: agentRuntime.ts  hermesDesktop.ts  hermesGateway.ts  hermesRunner.ts  hermesRuntime.ts  workspaceSync.ts
src/components/approvals/: ApprovalCard.tsx
src/components/artifacts/: ArtifactLibrary.tsx
src/components/dashboard/: WorkspaceDashboard.tsx
src/data/: hermesProviders.ts  mockData.ts
src/store/: useQarkoStore.ts
src/types/: qarko.ts
src/utils/: redaction.ts
tests/: betaReadiness.test.ts  hermesDesktop.test.ts  hermesProviders.test.ts  hermesRunner.test.ts  hermesRuntime.test.ts  serverApi.test.mjs  workspaceStore.test.mjs
(+11 files in other folders)
