[package]
name = "qarko-os"
version = "0.1.0"
description = "QARKO OS desktop app"
authors = ["QARKO"]
edition = "2021"

[lib]
name = "qarko_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
